# proyecto-ap

./: .gitignore  README.md  main.py  pyproject.toml
data/: .gitignore
